[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/dizzyedgeDEMO.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/white.png" type="Texture" id=3]
[ext_resource path="res://components/ExpressDialog/ExpressDialog.gd" type="Script" id=4]
[ext_resource path="res://assets/click.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/synth (2).wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0, 0, 0, 0.811765 )
corner_radius_top_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=33]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=34]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=35]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=36]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.287175, 0.329877 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.287175, 0.329877 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="ExpressDialog" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -140.0
margin_right = 257.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 249, 134 )
rect_clip_content = true
custom_styles/panel = SubResource( 32 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.627451, 0.972549, 1, 1 )
margin_left = 21.0
margin_top = 24.0
margin_right = 295.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 33 )
text = "Galaxy express pager"

[node name="display" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.517647 )
position = Vector2( 259.5, 125.25 )
scale = Vector2( 23.8696, 4.93478 )
texture = ExtResource( 3 )

[node name="info" type="Label" parent="."]
margin_left = 23.0
margin_top = 83.0
margin_right = 495.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 34 )
autowrap = true

[node name="Reset" type="Button" parent="."]
visible = false
margin_left = 26.0
margin_top = 201.0
margin_right = 241.0
margin_bottom = 251.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 35 )
text = "I'll try harder"

[node name="Continue" type="Button" parent="."]
visible = false
margin_left = 149.0
margin_top = 201.0
margin_right = 364.0
margin_bottom = 251.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 35 )
text = "Continue"

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 273.0
margin_top = 201.0
margin_right = 488.0
margin_bottom = 251.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 35 )
text = "next delivery >>>"

[node name="Sfx" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 6 )

[node name="Hover" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 5 )

[node name="NewMsg" type="AudioStreamPlayer" parent="Sfx"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 36 )
anims/Disappear = SubResource( 38 )
anims/RESET = SubResource( 37 )

[connection signal="mouse_entered" from="Reset" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="Reset" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="mouse_entered" from="Continue" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="Continue" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="Next" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="Next" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
